--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^5.1.3",
     "firebase": "^7.20.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.1.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.0",
     "web-vitals": "^1.0.1"
